Added multiple social account setup